@@ -8,16 +8,14 @@
         <version>1.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.4-java20-SNAPSHOT</version>
 
     <artifactId>docean</artifactId>
 
     <properties>
-        <netty.version>4.1.97.Final</netty.version>
+        <netty.version>4.1.48.Final</netty.version>
     </properties>
 
     <dependencies>
-
 
         <dependency>
             <groupId>run.mone</groupId>
@@ -43,51 +41,6 @@
             <version>2.8.5</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.10.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-
     </dependencies>
-
-    <build>
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <compilerVersion>20</compilerVersion>
-                    <source>20</source>
-                    <target>20</target>
-                </configuration>
-            </plugin>
-
-
-        </plugins>
-
-
-    </build>
-
 
 </project>
